syntax = "proto3";

package io.evitadb.externalApi.grpc.generated;
option java_multiple_files = true;
option csharp_namespace = "EvitaDB";

import "GrpcEnums.proto";
import "GrpcCatalogSchemaMutation.proto";
import "GrpcLocalMutation.proto";
import "GrpcEntityMutation.proto";
import "GrpcEntitySchemaMutation.proto";
import "google/protobuf/wrappers.proto";

message GrpcChangeSystemCapture {
  string catalog = 1;
  GrpcOperation operation = 2;
  GrpcTopLevelCatalogSchemaMutation mutation = 3;
}

message GrpcChangeCatalogCapture {
  int64 version = 1;
  int32 index = 2;
  GrpcCaptureArea area = 3;
  string entityType = 4;
  google.protobuf.Int32Value entityVersion = 5;
  GrpcOperation operation = 6;
  oneof body {
    GrpcEntityMutation entityMutation = 7;
    GrpcLocalMutation localMutation = 8;
    GrpcEntitySchemaMutation entitySchemaMutation = 9;
    GrpcLocalCatalogSchemaMutation catalogSchemaMutation = 10;
  }
}

message GrpcCaptureSince {
  google.protobuf.Int32Value version = 1;
  int64 transactionId = 2;
}

message GrpcSchemaSite {
  string entityType = 1;
  repeated GrpcOperation operations = 2;
}

message GrpcDataSite {
  string entityType = 1;
  google.protobuf.Int32Value entityPrimaryKey = 2;
  repeated GrpcClassifierType classifierTypes = 3;
  repeated GrpcOperation operations = 4;
}
